--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     // 讀取 GitHub 上的 .txt 檔案，並解析內容
     async function loadQuestions() {
-      const url = 'https://raw.githubusercontent.com/你的用戶名/你的repo名/main/questions_answers.txt'; // 請替換成你實際的 GitHub URL
+      const url = 'https://raw.githubusercontent.com/beebi01/bb-test-score/main/uestions_answers.txt'; // 請替換成你實際的 GitHub URL
       try {
         const response = await fetch(url);
         if (!response.ok) {
