--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
       font-size: 1.1em;
       margin-bottom: 8px;
     }
-    .options ul {
-      padding-left: 20px;
-    }
     .answer {
       color: #198754;
       margin-top: 8px;
@@ -65,12 +62,10 @@
   </div>
 
   <script>
-    // 全域變數，用來存放題庫資料
     let questions = [];
 
-    // 從 GitHub 上讀取題庫 .txt 檔案
+    // 從 GitHub 上讀取題庫 .txt 檔案（請確認此 URL 正確）
     async function loadQuestions() {
-      // 請將下列 URL 替換為你 GitHub Repo 中 raw 檔案的實際 URL
       const url = 'https://raw.githubusercontent.com/beebi01/bb-test-score/main/questions_answers.txt';
       try {
         const response = await fetch(url);
@@ -78,83 +73,39 @@
           throw new Error("無法載入題庫檔案，請檢查 URL 是否正確");
         }
         const text = await response.text();
-
-        // 將內容依換行分割，並解析每一行
-        questions = text
-          .split('\n')
-          .filter(line => line.trim() !== '')  // 過濾空行
-          .map(line => {
-            // 每一行用 "|" 分隔
-            const parts = line.split('|').map(item => item.trim());
-            if (parts.length < 3) {
-              // 至少應該有 [題型]題目、至少 1 個選項、1 個答案
-              return null;
-            }
-            // 判斷題目型態
-            const typeIndicator = parts[0].substring(0, 3); // 應為 "[S]" 或 "[M]"
-            let type = '';
-            if (typeIndicator === '[S]') {
-              type = 'single';
-            } else if (typeIndicator === '[M]') {
-              type = 'multiple';
-            } else {
-              // 若未符合，直接回傳 null
-              return null;
-            }
-            // 移除題目前的 [S] 或 [M] 標記
-            const questionText = parts[0].replace(/^\[[SM]\]/, '').trim();
-            // 正確答案設為該行最後一個欄位
-            const answer = parts[parts.length - 1];
-            // 選項則介於題目與答案之間
-            const options = parts.slice(1, parts.length - 1);
-
-            return {
-              type,           // 'single' 或 'multiple'
-              question: questionText,
-              options,        // 陣列形式的選項
-              answer          // 正確答案字串，例如單選："A" 或多選："A,B"
-            };
-          })
-          .filter(item => item !== null); // 移除格式不正確的項目
-
-        // 預設顯示所有題目
-        search();
+        // 以換行分割後，每一行以 "|" 分隔題目與答案
+        questions = text.split('\n').map(line => {
+          const parts = line.split('|');
+          if (parts.length === 2) {
+            return { question: parts[0].trim(), answer: parts[1].trim() };
+          } else {
+            return null;
+          }
+        }).filter(item => item !== null);
       } catch (error) {
         console.error(error);
         document.getElementById('resultContainer').innerHTML = '<div class="alert alert-danger">載入題庫失敗！</div>';
       }
     }
 
-    // 搜尋題目並顯示結果
+    // 搜尋題目並動態顯示結果
     function search() {
       const keyword = document.getElementById('searchInput').value.toLowerCase();
       const container = document.getElementById('resultContainer');
       container.innerHTML = '';
-
       const results = questions.filter(q => q.question.toLowerCase().includes(keyword));
-
+      
       if (results.length === 0 && keyword !== '') {
         container.innerHTML = '<div class="alert alert-warning">找不到相關題目。</div>';
         return;
       }
-
+      
       results.forEach(q => {
-        // 產生卡片 div
         const card = document.createElement('div');
         card.className = 'card';
-
-        // 題目型態標示
-        const typeText = q.type === 'single' ? '單選題' : '多選題';
-
-        // 建立內部 HTML：題型、題目、選項與正確答案
         card.innerHTML = `
-          <div class="question"><b>題型：</b>${typeText}<br><b>題目：</b>${q.question}</div>
-          <div class="options"><b>選項：</b>
-            <ul>
-              ${q.options.map(opt => `<li>${opt}</li>`).join('')}
-            </ul>
-          </div>
-          <div class="answer"><b>正確答案：</b>${q.answer}</div>
+          <div class="question">📝 ${q.question}</div>
+          <div class="answer">✅ 答案：${q.answer}</div>
         `;
         container.appendChild(card);
       });
