--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     let questions = [];
 
     // ✅ 這是你 GitHub 上 questions.json 的 raw 連結
-    const jsonURL = "https://raw.githubusercontent.com/beebi01/bb-test-score/main/questions.json";
+    const jsonURL = "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/beebi01/bb-test-score/main/questions.json";
 
     // 讀取題庫 JSON
     fetch(jsonURL)
