--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     body {
       background: #f0f2f5;
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
     }
-
     .container {
       max-width: 900px;
       margin: 40px auto;
@@ -24,24 +21,20 @@
       border-radius: 15px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     .card {
       border: none;
       border-left: 5px solid #0d6efd;
       margin-bottom: 15px;
       background: #f8f9fa;
     }
-
     .question {
       font-weight: bold;
       font-size: 1.1em;
     }
-
     .answer {
       color: #198754;
       margin-top: 8px;
     }
-
     input {
       font-size: 16px;
       padding: 6px;
@@ -49,7 +42,6 @@
       width: 100%;
       box-sizing: border-box;
     }
-
     @media (max-width: 600px) {
       .question, .answer {
         font-size: 14px;
@@ -66,11 +58,8 @@
 
   <script>
     let questions = [];
-
-    // ✅ 這是你 GitHub 上 questions.json 的 raw 連結
     const jsonURL = "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/beebi01/bb-test-score/main/questions.json";
 
-    // 讀取題庫 JSON
     fetch(jsonURL)
       .then(response => {
         if (!response.ok) throw new Error("網路錯誤");
@@ -78,7 +67,7 @@
       })
       .then(data => {
         questions = data;
-        search(); // 預設先跑一次，顯示全部題目
+        search();
       })
       .catch(error => {
         console.error("載入題庫失敗：", error);
@@ -86,7 +75,6 @@
           '<div class="alert alert-danger">❌ 題庫載入失敗，請稍後再試。</div>';
       });
 
-    // 搜尋功能
     function search() {
       const keyword = document.getElementById('searchInput').value.toLowerCase();
       const results = questions.filter(q => q.question.toLowerCase().includes(keyword));
