--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   { question: "您正在監視Syslog伺服器並觀察到DNS伺服器正在傳送警告嚴重性的訊息這些訊息表示DNS伺服器的作業發生什麼情況?", answer: "C. 如果問題未修正,則存在將來會導致錯誤的情況。" },
   { question: "有數名員工抱怨公司内部網路網站不再接受他們的登入资訊。您是網管人員試圖使用URL進行連線,並注意到網站上有一些拼寫錯誤。您使用IP 位址線時,網站運作正常。請問您該怎麼做?", answer: "C. 驗證本地DNS伺服器中網站進入的準確性。" },
   { question: "下列哪一個指令會顯示設定的DNS伺服器資訊和URL的IP位址解析？", answer: "C. Nslookup" },
-  { question: "使用者端無法連線到公司網頁伺服器。您發現有大量的半開放式TCP連線至伺服器。請問您該怎麼做?", answer: "D. 採取措施阻止TCP SYN洪水攻擊。" },
+  { question: "使用者端無法連線到公司網頁伺服器。您發現有大量的半開放式TCP連線至伺服器。請問您該怎麼做?", answer: "D. 採取措施阻止TCP SYN洪水攻擊。" }
 ];
 
     function search() {
