--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
       color: #198754;
       margin-top: 8px;
     }
+    .footer {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 14px;
+    color: #666;
+    }
+    .footer a {
+    color: #4CAF50;
+    text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -190,5 +200,8 @@
       });
     }
   </script>
+  <div class="footer">
+    <p>&copy; y.b ></a></p>
+  </div>
 </body>
 </html>
