--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
     }
   </script>
   <div class="footer">
-    <p>&copy; y.b ></a></p>
+    <p>&copy; y.b 
+    One in a million</a></p>
   </div>
 </body>
 </html>
