--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
     }
   </script>
   <div class="footer">
-    <p>&copy; y.b 
-    One in a million</a></p>
+    <p>&copy; <b></b>y.b</b><br/> One in a million</a></p>
   </div>
 </body>
 </html>
