--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mb-4 text-center text-primary">題庫查詢系統</h1>
+    <h1 class="mb-4 text-center text-primary">懂得人都懂</h1>
     <input type="text" class="form-control mb-3" placeholder="輸入關鍵字查詢..." id="searchInput" oninput="search()">
     <div id="resultContainer"></div>
   </div>
