--- a/index.html
+++ b/index.html
@@ -1,98 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>題庫查詢系統</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-    body {
-        font-family: sans-serif;
-        margin: 10px;
-        padding: 0;
-    }
-    table {
-        width: 100%%;
-        border-collapse: collapse;
-        word-break: break-word;
-    }
-    th, td {
-        padding: 8px;
-        border: 1px solid #ccc;
-        text-align: left;
-        font-size: 16px;
-    }
-    input, button, select {
-        font-size: 16px;
-        padding: 6px;
-        margin: 5px 0;
-        width: 100%%;
-        box-sizing: border-box;
-    }
-    @media (max-width: 600px) {
-        th, td {
-            font-size: 14px;
-        }
-        input, button, select {
-            font-size: 14px;
-        }
-    }
+        body { background: #f0f2f5; font-family: 'Segoe UI', sans-serif; }
+        .container { max-width: 900px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .card { border: none; border-left: 5px solid #0d6efd; margin-bottom: 15px; background: #f8f9fa; }
+        .question { font-weight: bold; font-size: 1.1em; }
+        .answer { color: #198754; margin-top: 8px; }
+        input { font-size: 16px; padding: 6px; margin: 5px 0; width: 100%; box-sizing: border-box; }
     </style>
-    
-  <meta charset="UTF-8">
-  <title>Search System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: #f0f2f5;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .card {
-      border: none;
-      border-left: 5px solid #0d6efd;
-      margin-bottom: 15px;
-      background: #f8f9fa;
-    }
-    .question {
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-    .answer {
-      color: #198754;
-      margin-top: 8px;
-    }
-    .footer {
-    text-align: center;
-    margin-top: 30px;
-    font-size: 14px;
-    color: #666;
-    }
-    .footer a {
-    color: #4CAF50;
-    text-decoration: none;
-    }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="mb-4 text-center text-primary">懂得人都懂</h1>
-    <input type="text" class="form-control mb-3" placeholder="輸入關鍵字查詢..." id="searchInput" oninput="search()">
-    <div id="resultContainer"></div>
-  </div>
+    <div class="container">
+        <h1 class="mb-4 text-center text-primary">題庫查詢系統</h1>
+        <input type="text" class="form-control mb-3" placeholder="輸入關鍵字查詢..." id="searchInput" oninput="search()">
+        <div id="resultContainer"></div>
+    </div>
 
-  <script>
+    <script>
     const questions = [
   { question: "Your team is hired to test a business named Matt’s Bait ’n’ Tackle Shop (domain name mattsBTshop.com). A team member runs the following command:metagoofil -d mattsBTshop.com -t doc,docx -l 50 -n 20 -f results.html  Which of the following best describes what the team member is attempting to do?", answer: "Extracting metadata info from Microsoft Word documents found in mattsBTshop.com, outputting results in an HTML file" },
   { question: "You have a zombie system ready and begin an IDLE scan. As the scan moves along, you notice that fragment identification numbers gleaned from the zombie machine are incrementing randomly. What does this mean?", answer: "Your IDLE scan results will not be useful to you." },
   { question: "You want to perform a ping sweep of a subnet within your target organization. Which of the following nmap command lines is your best option?", answer: "nmap -sP 192.168.1.0/24" },
   { question: "A pen tester is performing banner grabbing and executes the following command: $ nmap -sV host.domain.com -p 80 He gets the following output: Starting Nmap 6.47 ( http://nmap.org ) at 2022-07-08 19:10 EST Nmap scan report for host.domain.com (108.61.158.211) Host is up (0.032s latency). PORT STATE SERVICE VERSION 80/tcp open http Apache httpd Service detection performed. Please report any incorrect results at http://nmap.org/submit/. VCEConvert.com Nmap done: 1 IP address (1 host up) scanned in 6.42 seconds Which of the following is a true statement?", answer: "The pen tester was successful in banner grabbing." },
   { question: "A colleague enters the following command: root@mybox: # hping3 -A 192.168.2.x -p 80 What is being attempted here?", answer: "An ACK scan using hping3 on port 80 for a group of addresses" },
-  { question: ". You are examining traffic between hosts and note the following exchange: Source Prot Port Flag Destination 192.168.5.12 TCP 4082 FIN/URG/PSH 192.168.5.50 192.168.5.12 TCP 4083 FIN/URG/PSH 192.168.5.50 192.168.5.12 TCP 4084 FIN/URG/PSH 192.168.5.50 192.168.5.50 TCP 4083 RST/ACK 192.168.5.12 192.168.5.12 TCP 4085 FIN/URG/PSH 192.168.5.50 Which of the following statements are true regarding this traffic? (Choose all that apply.) (多選題兩個答案)  ", answer:<br/>"B.It appears to be part of an XMAS scan.<br/> D.It appears port 4083 is closed." },
+  { question: ". You are examining traffic between hosts and note the following exchange: Source Prot Port Flag Destination 192.168.5.12 TCP 4082 FIN/URG/PSH 192.168.5.50 192.168.5.12 TCP 4083 FIN/URG/PSH 192.168.5.50 192.168.5.12 TCP 4084 FIN/URG/PSH 192.168.5.50 192.168.5.50 TCP 4083 RST/ACK 192.168.5.12 192.168.5.12 TCP 4085 FIN/URG/PSH 192.168.5.50 Which of the following statements are true regarding this traffic? (Choose all that apply.) (多選題兩個答案) ", answer: " B. It appears to be part of an XMAS scan.It appears port 4083 is closed." },
   { question: "You are examining traffic and notice an ICMP Type 3, Code 13 response. What does this normally indicate?", answer: "A firewall is prohibiting connection." },
   { question: "Which port-scanning method presents the most risk of discovery but provides the most reliable results?", answer: "Full-connect" },
   { question: "As a pen test on a major international business moves along, a colleague discovers an IIS server and a mail exchange server on a DMZ subnet. You review a ping sweep accomplished earlier in the day on that subnet and note neither machine responded to the ping. What is the most likely reason for the lack of response?", answer: "ICMP is being filtered." },
@@ -308,32 +245,29 @@
   { question: "This form of encryption algorithm is asymmetric key block cipher that is characterized by a 128-bit block size, and its key size can be up to 256 bits. Which among the following is this encryption algorithm?", answer: "Twofish encryption algorithm" },
   { question: "下列何者技術可保護資料傳輸過程安全？", answer: "加密" },
   { question: "關於雙因素認證常見的媒介，下列敘述何者不正確？", answer: "密碼" }
-];;
+];
 
     function search() {
-      const keyword = document.getElementById('searchInput').value.toLowerCase();
-      const results = questions.filter(q => q.question.toLowerCase().includes(keyword));
-      const container = document.getElementById('resultContainer');
-      container.innerHTML = '';
+        const keyword = document.getElementById('searchInput').value.toLowerCase();
+        const results = questions.filter(q => q.question.toLowerCase().includes(keyword));
+        const container = document.getElementById('resultContainer');
+        container.innerHTML = '';
 
-      if (results.length === 0 && keyword !== '') {
-        container.innerHTML = '<div class="alert alert-warning">找不到相關題目。</div>';
-        return;
-      }
+        if (results.length === 0 && keyword !== '') {
+            container.innerHTML = '<div class="alert alert-warning">找不到相關題目。</div>';
+            return;
+        }
 
-      results.forEach(q => {
-        const card = document.createElement('div');
-        card.className = 'card p-3';
-        card.innerHTML = `
-          <div class="question">📝 ${q.question}</div>
-          <div class="answer">✅ 答案：${q.answer}</div>
-        `;
-        container.appendChild(card);
-      });
+        results.forEach(q => {
+            const card = document.createElement('div');
+            card.className = 'card p-3';
+            card.innerHTML = `
+                <div class="question">📝 ${q.question}</div>
+                <div class="answer">✅ 答案：${q.answer}</div>
+            `;
+            container.appendChild(card);
+        });
     }
-  </script>
-  <div class="footer">
-    <p>&copy; <b></b>y.b</b><br/> One in a million</a></p>
-  </div>
+    </script>
 </body>
 </html>
