--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
   { question: "When using SNMP, what is MIB?", answer: "Management Information Base" },
   { question: "You have been asked to perform a penetration test of ABC bank. One of the early steps is to map out the network. You are using your Linux laptop and wish to find out the primary source for NTP. What command should you use?", answer: "ntptrace" },
   { question: "Ramone is trying to enumerate machines on a network. The network uses a Windows Server 2019 domain controller. Which of the following commands is most likely to give him information about machines on that network?", answer: "net view" },
+  { question: "What flag identifies the network card you use with tcpdump?", answer: "C.-i" },
   { question: "You are using tcpdump. What will the following command do? tcpdump -c 500 -i eth0", answer: "Capture 500 packets on interface eth0." },
   { question: "John is using Wireshark to identify network traffic. What color designates DNS traffic?", answer: "Dark Blue" },
   { question: "Adrian wants to capture traffic on the second network card, and only traffic using port 22 (SSH). What command will do this?", answer: "tcpdump -i eth2 port 22" },
