--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   { question: "有關作業系統資源配置發生死結（deadlock）之敘述，下列 何者錯誤？", answer: "系統資源可被強制從一個程序中退出時發生死結 （deadlock）的可能因素之一" },
   { question: "當攻擊者取得作業系統存取權限時，通常會想盡辦法翻找伺 服器中的系統設定檔，期望在系統中找到其他可用的帳號密 碼，以便做為權限控制的備案。下列哪一個 Linux 的檔案內容，包含使用者帳號名稱與密碼雜湊函數？", answer: "/etc/shadow" },
   { question: "為了讓作業系統變得更安全、更難以入侵，通常企業會對作業系統進行安全強化（Harden），下列何項不是 Linux 作業系統經常採用的安全強化機制？", answer: "關閉所有非必要的系統服務與通訊協定，但是保留 nmap，以便進行自我掃描跟檢測" },
-  { question: "下列何種攻擊手法是運用輸入超過預設資料長度的方式，影響記憶體中資料的正確性？", answer: "緩衝區溢位攻擊（Buffer Overflow）" },
+  { question: "下列何種攻擊手法是運用輸入超過預設資料長度的方式，影響記憶體中資料的正確性？", answer: "A.緩衝區溢位攻擊（Buffer Overflow）" },
   { question: "當 A 公司的備份策略是每個月底最後一天的晚上 6 點後進 行一次全備份，而每週六凌晨 1 點進行一次差異備份，假設 所有備份檔案都完整，今天 3 月 10 日剛好是週五，中午時 不幸系統中毒，所有資料遺失，請問當備份順利還原後，最近的資料是下列哪一天的備份？", answer: "3 月 4 日" },
   { question: "異地備援是資料備份最好的選擇，其復原速度最快的是下列 何種方式？", answer: "全備援（Mirrored Site）" },
   { question: "企業透過日誌管理，處理大量且複雜的日誌資訊（例如：logs & events），IT 部門或是資安部門將這些記錄使用在容量監 控管制、故障排除、合規性記錄留存、資安威脅檢測與鑑識… 等目的，關於日誌管理的敘述，下列何者錯誤？", answer: "可用於事件取證，日誌資訊對於原因的判別是關鍵 點，而在還不確定原因之前，則需要全面性的收集 日誌資訊" },
@@ -245,7 +245,32 @@
   { question: "You work for Acme Corporation as Sales Manager. The company has tight network security restrictions. You are trying to steal data from the company's Sales database (Sales.xls) and transfer them to your home computer. Your company filters and monitors traffic that leaves from the internal network to the Internet. How will you achieve this without raising suspicion?", answer: "You can conceal the Sales.xls database in another file like photo.jpg or other files and send it out in an innocent looking email or file transfer using Steganography techniques" },
   { question: "This form of encryption algorithm is asymmetric key block cipher that is characterized by a 128-bit block size, and its key size can be up to 256 bits. Which among the following is this encryption algorithm?", answer: "Twofish encryption algorithm" },
   { question: "下列何者技術可保護資料傳輸過程安全？", answer: "加密" },
-  { question: "關於雙因素認證常見的媒介，下列敘述何者不正確？", answer: "密碼" }
+  { question: "關於雙因素認證常見的媒介，下列敘述何者不正確？", answer: "密碼" },
+  { question: "If you can correctly answer these CramSaver questions, save time by skimming the Exam Alerts in this section and then completing the Cram Quiz. If you are in any doubt at all, read everything in this chapter. 1. Which of the following web pages would be most likely to give you information about the operating system and web server a website is using?", answer: "D.netcraft.com" },
+  { question: "When examining an email header, what does the References section denote? ", answer: "C.The Message ID that is being replied to" },
+  { question: "Carol is trying to find information about a specific IP address in Belgium. Which registry should she check?", answer: "A.RIPE NCC" },
+  { question: "Which of the following Google search strings will find documents in the URL that contains the keyword given?", answer: "A.inurl" },
+  { question: "Which of the following modes for InSpy specifically searches for employees of a company on LinkedIn? ", answer: "C.EmpSpy" },
+  { question: "You have been asked to perform a penetration test on a company. You have only been given the company domain name and gateway IP address. What type of test is this?", answer: "D.Black box" },
+  { question: "Clarence is performing an Nmap scan of a database server, using nmap -sR -oX - T3 192.168.1.19. What is this scan?", answer: "B.An RPC scan with normal speed and XML output" },
+  { question: "What is the TCP window size for Windows 10?", answer: "D.65535" },
+  { question: "Jerrod is running an hping v3 scan on a target machine. He wants to send TCP SYN packets every 3 seconds to port 445 on host 10.10.10.15. Which command will do that? ", answer: "C.hping3 10.10.10.15 -S -V -p 445 -i 3" },
+  { question: "Which of the following nmap commands performs a SYN scan on the target 192.168.1.10 using aggressive speed? ", answer: "C.nmap -sS -T4 192.168.1.10" },
+  { question: "What type of scan does hping3 www.chuckeasttom.com -a 182.10.10.10 perform? ", answer: "B.It performs an hping scan of www.chuckeasttom.com, spoofing the IP address 182.10.10.10." },
+  { question: "What will you accomplish by changing the ServerSignature line to ServerSignature Off in the httpd.conf file? ", answer: "A.Turn off banner information in Apache." },
+  { question: " _____ 是想要攻擊電腦，但缺乏所需知識的人。", answer: "A.腳本小子" },
+  { question: "關於機敏性（Confidentiality），下列敘述何者正確？", answer: "B.資訊於儲存、傳輸過程中應採取加密措施" },
+  { question: "下列何者「不」是個人隱私保護需涵蓋的範圍？", answer: "D.公司地址" },
+  { question: "「留存日誌」是為了達成資訊安全的何種特性？", answer: "B.不可否認性（Non-Repudiation)" },
+  { question: "What information security law or standard aims at protecting stakeholders and the general public from accounting errors and fraudulent activities within organizations? ", answer: "C.SOX" },
+  { question: "The network team has well-established procedures to follow for creating new rules on the firewall. This includes having approval from a manager before implementing any new rules. While reviewing the firewall configuration, you notice a recently implemented rule but cannot locate manager approval for it. What would be a good step to have in the procedures for a situation like this? ", answer: "D.Immediately roll back the firewall rule until a manager can approve it" },
+  { question: "IP 之間的傳輸，屬 OSI 模型哪一層次？", answer: "C網路層（Network Layer)" },
+  { question: "在寄送電子郵件時，可以運用安全電子郵件簽章/密碼技術，以確保資 訊的哪些特性？", answer: "B.(1), (2), (4)" },
+  { question: "下列何者不屬於作業系統安全預防(Preventive)機制？", answer: "D.定期檢視安全記錄檔（Log）" },
+  { question: "安全的系統發展生命週期（Secure Software Development Life Cycle， SSDLC）意指發展一套安全系統的順序，用以開發完善安全的資訊系 統。以下哪個不是安全的系統發展生命週期階段？", answer: "C.估價" },
+  { question: "關於個人資料電子檔案管理，下列敘述何者不正確？", answer: "B.臨時性之個人資料檔案存放於個人電腦、公用資料夾、公用 PC 之暫存資料夾中時，其存放天數不可限制" },
+  { question: "在一個組織或安全網域內，相關的資訊系統須有一致性的同步時脈（鐘訊同步），其主要的目的為何？", answer: "D.確保稽核日誌的準確性，以便紀錄事件與生成證據" },
+  { question: "請問 DNS 放大攻擊，最屬於下列何種網路攻擊？", answer: "D.阻斷服務攻擊" }
 ];
 
     function search() {
