--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   { question: "What would you use credentials for in a vulnerability scanner?", answer: "Scanning for local vulnerabilities" },
   { question: "是專門用來阻擋網路入侵的硬體裝置？", answer: "硬體防火牆" },
   { question: "Log monitoring tools performing behavioral analysis have alerted several suspicious logins on a Linux server occurring during non-business hours. After further examination of all login activities, it is noticed that none of the logins have occurred during typical work hours. A Linux administrator who is investigating this problem realizes the system time on the Linux server is wrong by more than twelve hours. What protocol used on Linux servers to synchronize the time has stopped working?", answer: "NTP" },
-  { question: "A network admin contacts you. He is concerned that ARP spoofing or poisoning might occur on his network. What are some things he can do to prevent it? Select the best answers. (多選題3個答案)  A Use port security on his switches. B Use a tool like ARPwatch to monitor for strange ARP activity", answer: "If you have a small network, use static ARP entries" },
+  { question: "A network admin contacts you. He is concerned that ARP spoofing or poisoning might occur on his network. What are some things he can do to prevent it? Select the best answers. (多選題3個答案) ", answer: "A.Use port security on his switches.<br/>B.Use a tool like ARPwatch to monitor for strange ARP activity<br/>D.If you have a small network, use static ARP entries" },
   { question: "許多公司會將不同設備的日誌（Log）蒐集到同一個平台進行管理，但因為不同設備之日誌格式、命名方式不盡相同，此時為了方便分析， 通常會對這些日誌進行什麼處理？ (", answer: "正規化（Normalization）" },
   { question: "下列何項「不」屬於網路安全的威脅？", answer: "USB Attack" },
   { question: "有關 OWASP Top 10 之敘述，下列何者正確？", answer: "為網路應用程式漏洞的指南" },
