--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>題庫查詢系統</title>
+    <title>Question Sysetem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { background: #f0f2f5; font-family: 'Segoe UI', sans-serif; }
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4 text-center text-primary">題庫查詢系統</h1>
+        <h1 class="mb-4 text-center text-primary">懂得都懂</h1>
         <input type="text" class="form-control mb-3" placeholder="輸入關鍵字查詢..." id="searchInput" oninput="search()">
         <div id="resultContainer"></div>
     </div>
