--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         .question { font-weight: bold; font-size: 1.1em; }
         .answer { color: #198754; margin-top: 8px; }
         input { font-size: 16px; padding: 6px; margin: 5px 0; width: 100%; box-sizing: border-box; }
+        .footer {text-align: center;margin-top: 30px; font-size: 14px;color: #666;}
+        .footer a { color: #4CAF50;text-decoration: none; }
     </style>
 </head>
 <body>
+    <div class="footer">
+    <p>&copy; y.b ></a></p>
+    </div>
     <div class="container">
         <h1 class="mb-4 text-center text-primary">懂得都懂</h1>
         <input type="text" class="form-control mb-3" placeholder="輸入關鍵字查詢..." id="searchInput" oninput="search()">
